--- a/sparta/css/style.css
+++ b/sparta/css/style.css
@@ -465,7 +465,10 @@ button {
     cursor: pointer;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 780px) {
+    body, section {
+        width: 100%;
+    }
     .header-banner__title h1 {
         font-size: 2.53333em;
         line-height: .9;
@@ -506,7 +509,6 @@ button {
         text-align: center;
     }
     .mission {
-        margin-bottom: 6.5%;
         padding: 0;
         width: 100%;
     }
